projects sectie toegevoegd met link naar covid-19 website

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML Tutorial</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
             </ul>
         </div>
     </div>
@@ -383,6 +383,22 @@
 </section>
 
 <!--================================================================-->
+
+<!-- Projects -->
+<section class="projects-section bg-light" id="Projects">
+    <div class="container">
+        <!-- Challenge Row-->
+        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
+                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                    <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19">Covid-19 ZonMw project</a></h4>
+                    <p class="mb-4">
+                      As a result of Covid-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of Covid-19 into NGT.
+                    </p>
+                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                </div>
+        </div>
+    </div>
+</section>
 
 <!-- Footer-->
 <footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam</div></footer>
