SiGML pagina: avatar + explain

--- a/index.html
+++ b/index.html
@@ -348,9 +348,10 @@
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Tutorial</h2>
-              <p class="text-black-50 mb-0">
-                To be added.
-              </p>
+              <span id="avatar" class="CWASAAvatar av0" align="left" ></span>
+              <span id="explanation" class="undisplayed" align="left">
+                <div id="explText" class ="undisplayed"></div>
+              </span>
               <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
           </div>
       </div>
