--- a/index.html
+++ b/index.html
@@ -155,10 +155,7 @@
             <input type="radio" id="freestyleDisplay" name="display" value="freestyle" checked onclick="changeFunc(this);">
             <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">Avatar translation</label>
 
-             <br>
-             <!-- Defines the button and label displayed for the option "explanation" -->
-              <input type="radio" id="explainDisplay" name="display" value="explain" onclick="changeFunc(this);">
-              <label for="avatar" style="margin-right: 5px">Explanation SiGML</label>
+           
 
 
               <br>
@@ -348,11 +345,24 @@
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Tutorial</h2>
-              <span id="avatar" class="CWASAAvatar av0" align="left" ></span>
-              <span id="explanation" class="undisplayed" align="left">
-                <div id="explText" class ="undisplayed"></div>
+              <span id="avatarTut" class="undisplayed" align="right" ></span>
+              <span id="explanation" class="explSpan" align="left">
+                <div id="explText" class ="explSiGML"></div>
               </span>
-              <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
+
+            <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
+              <h4>Choose an output option:</h4>
+              <br>
+              <!-- Defines the button and label displayed for the option "explanation" -->
+              <input type="radio" id="explainDisplay" name="display" value="explain" onclick="changeFunc(this);">
+              <label for="avatar" style="margin-right: 5px">Explanation SiGML</label>
+              <br>
+              <br>
+              <!-- Defines the button and label displayed for the option "fingerspell" -->
+              <input type="radio" id="explain+ava" name="display" value="explain+ava" onclick="changeFunc(this);">
+              <label for="explain+ava" style="margin-right:5px">Explanation SiGML + avatar animation</label>
+              
+            </span>
           </div>
       </div>
 
