SiGML pagina: avatar + explain

--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@
               <h4>Choose an output option:</h4>
               <br>
               <!-- Defines the button and label displayed for the option "explanation" -->
-              <input type="radio" id="explainDisplay" name="display" value="explain" onclick="changeFunc(this);" checked>
+              <input type="radio" id="explainDisplay" value="explain" onclick="changeFunc(this);" checked>
               <label for="avatar" style="margin-right: 5px">Explanation SiGML</label>
               <br>
               <br>
               <!-- Defines the button and label displayed for the option "explain+ava" -->
-              <input type="radio" id="explain+ava" name="display" value="explain+ava" onclick="changeFunc(this);">
+              <input type="radio" id="explain+ava" value="explain+ava" onclick="changeFunc(this);">
               <label for="explain+ava" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
               <br>
               <textarea id="SiGMLTut" placeholder="enter the gloss(es) of which you would like SiGML explained here"></textarea>
