SiGML pagina: avatar + explain

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <label for="explain+ava" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
               <br>
               
-              <textarea id="SiGMLTut" placeholder="enter the gloss(es) of which you would like SiGML explained here"></textarea>
+              <textarea id="SiGMLTut" placeholder="Enter the gloss(es) whose SiGML you would like explained here"></textarea>
               <br>
               
               <input type="button" class="btn btn-primary" id="playTut" value="Play" onclick='callPython(document.getElementById("SiGMLTut").value);'/>
