avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <div id="explText" class ="explSiGML"></div>
               </span>
 
-            <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
+            <span align="right" style="display:inline-block; vertical-align:top; margin:30px;">
               <h4>Choose an output option:</h4>
               <br>
               <!-- Defines the button and label displayed for the option "explanation" -->
@@ -352,8 +352,8 @@
               <br>
               
               <!-- Defines the button and label displayed for the option "explain+ava" -->
-              <input type="radio" name="expl" id="explain+ava" value="explain+ava" onclick="changeFunc(this);">
-              <label for="explain+ava" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
+              <input type="radio" name="expl" id="explainAva" value="explainAva" onclick="changeFunc(this);">
+              <label for="explainAva" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
               <br>
               
               <textarea id="SiGMLTut" placeholder="Enter the gloss(es) whose SiGML you would like explained here"></textarea>
