avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Tutorial</h2>
-              <span id="explanation" class="explSpan" align="left">
+              <span id="explanation" class="explSpan" align="left" style="width: 300px;">
                 <div id="explText" class ="explSiGML"></div>
               </span>
 
