avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               <br>
             </span>
 
-             <span id="avatarTut" class="CWASAAvatar av0" style="display: inline-block; background: #A3B8D2; width:200px; height:500px;"></span>
+             <span id="avatarTut" class="CWASAAvatarTut av0" style="display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span>
           </div>
       </div>
 
