avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
           <div class="project-text pt-0 text-lg-left">
               <h2>Tutorial</h2>
               <span id="explanation" class="explSpan" align="left" style="width: 300px; vertical-align:top;">
-                <div id="explText" class ="explSiGML"></div>
+                <div id="explText" class ="explSiGML" style="width: 280px;"></div>
               </span>
 
             <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
