--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Tutorial</h2>
-              <span id="explanation" class="explSpan" align="left" style="width: 300px; vertical-align:top;">
+              <span id="explanation" class="explSpan" align="left" style="width: 300px;">
                 <div id="explText" class ="explSiGML" style="width: 280px;"></div>
               </span>
 
@@ -376,7 +376,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvatarTut av0" style="vertical-align:top; display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span>
+            <span id="avatarTut" class="CWASAAvatarTut av0" style="display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span>
           </div>
       </div>
 
