--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <div id="explText" class ="explSiGML" style="width: 280px;"></div>
               </span>
 
-            <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
+            <span align="left" style="display:inline-block; vertical-align:top;width: 200px;">
               <h4>Choose an output option:</h4>
               <br>
               <!-- Defines the button and label displayed for the option "explanation" -->
@@ -376,7 +376,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvatarTut av0" style="display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span>
+            <span align="left" id="avatarTut" class="CWASAAvatarTut av0" style="display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span>
           </div>
       </div>
 
