avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
-              <h2 align="center">Tutorial</h2>
+              <h2 align="center" style="margin-bottom: 20px;">Tutorial</h2>
               <span id="explanation" class="explSpan" align="left" style="width: 300px;">
                 <div id="explText" class ="explSiGML" style="width: 280px;"></div>
               </span>
