avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="width: 400px;"></span>
+        <span id="avatar" class="CWASAAvatar av0" align="left" style="width: 400px; vertical-align:top;"></span>
         <!--================================================================-->
-
 
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
