avatar kleiner laten verschijnen

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <span id="avatar" class="CWASAAvatar av0" align="left" style="vertical-align:top;"></span>
         <!--================================================================-->
 
-        <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
+        <span align="left" style="display:inline-block; vertical-align:top; margin-left: 30px;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose an output option:</h4>
             </label>
