--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvatar av0" align="left" style="vertical-align:top;"></span>
+            <span id="avatarTut" class="CWASAAvatar av0" align="left" style="vertical-align:top; display: inline-block;"></span>
             <!-- <span id="avatarTut" class="CWASAAvatar av0" style="vertical-align:top; display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span> -->
           </div>
       </div>
