--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="vertical-align:top;"></span>
+        <!-- <span id="avatar" class="CWASAAvatar av0" align="left" style="vertical-align:top;"></span> -->
         <!--================================================================-->
 
         <span align="left" style="display:inline-block; vertical-align:top; margin-left: 30px;">
@@ -375,7 +375,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvatar av0" align="left" style="vertical-align:top; display:inline-block;"></span>
+            <span id="avatarTut" class="CWASAAvatarTut av0" align="left" style="vertical-align:top; display:inline-block;"></span>
             <!-- <span id="avatarTut" class="CWASAAvatar av0" style="vertical-align:top; display: inline-block; background: #A3B8D2; width:300px; height:500px;"></span> -->
           </div>
       </div>
