--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAPanel av1" align="left" style="vertical-align:top; width: 300px"></span>
+            <span id="avatarTut" class="CWASAPanel av1"></span>
           </div>
       </div>
 
