probeersel twee avatars in 1 .html bestand

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
             </span> -->
 
-           <!--  <span id="avatarTut" class="CWASAPanel av1"></span> -->
+           <!--  <span id="avatarTut" class="CWASAAvatar av1"></span> -->
             <div class="CWASAPanel av1" align="center" ></div>
           </div>
       </div>
