probeersel twee avatars in 1 .html bestand

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             </span> -->
 
            <!--  <span id="avatarTut" class="CWASAAvatar av1"></span> -->
-            <div class="CWASAAvatar  av1" align="center" ></div>
+            <div class="CWASAAvatar" align="center" ></div>
           </div>
       </div>
 
