--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link main" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Tutorial">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Projects">Projects</a></li>
+                <li class="nav-item fade"><a class="nav-link" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
             </ul>
         </div>
     </div>
