--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item fade show"><a class="nav-link" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link main" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
