--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link main" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
@@ -128,7 +128,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white" id="Translate">
+<section class="projects-section bg-white fadeIn" id="Translate">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
