fade in effect on main website

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white fadeIn" id="Translate">
+<section class="projects-section bg-white" id="Translate">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
