--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand fadeIn" href="#page-top">
+        <a class="navbar-brand" href="#page-top">
         <img src="images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
