fade in effect on main website

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link" href="#About" onclick="document.getElementById('About').setAttribute('class', 'projects-section bg-light main');;">Mission</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
@@ -89,8 +89,8 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light" id="About">
-    <div class="container main">
+<section class="projects-section bg-light main" id="About">
+    <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
