remove scroll to each section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand"data-target="#page-top">
+        <a class="navbar-brand" href="#page-top">
         <img src="images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
@@ -60,14 +60,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" data-target="#About" onclick="document.getElementById('About').setAttribute('class', 'projects-section bg-light main');;">Mission</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#Tutorial">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#Projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#About" onclick="document.getElementById('About').setAttribute('class', 'projects-section bg-light main');">Mission</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
             </ul>
         </div>
     </div>
