--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#About" onclick="document.getElementById('About').setAttribute('class', 'projects-section bg-light main');">Mission</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Translate" onclick="document.getElementById('Translate').setAttribute('class', 'projects-section bg-light main');">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" href="#People" onclick="document.getElementById('People').setAttribute('class', 'projects-section bg-light main');">People</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Publications" onclick="document.getElementById('Publications').setAttribute('class', 'projects-section bg-light main');">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Funding" onclick="document.getElementById('Funding').setAttribute('class', 'projects-section bg-light main');">Funding</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Tutorial" onclick="document.getElementById('Tutorial').setAttribute('class', 'projects-section bg-light main');">SiGML</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Resources" onclick="document.getElementById('Resources').setAttribute('class', 'projects-section bg-light main');">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Projects" onclick="document.getElementById('Projects').setAttribute('class', 'projects-section bg-light main');">Projects</a></li>
             </ul>
         </div>
     </div>
