--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light main" id="About">
+<section class="projects-section bg-light" id="About">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
@@ -128,7 +128,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white" id="Translate">
+<section class="projects-section bg-white undisplayed" id="Translate">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -216,7 +216,7 @@
 <!--================================================================-->
 
 <!-- Project info section -->
-<section class="projects-section bg-light" id="People">
+<section class="projects-section bg-light undisplayed" id="People">
 
     <div class="container" height="100%">
 
@@ -297,7 +297,7 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white" id="Publications">
+<section class="projects-section bg-white undisplayed" id="Publications">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -314,7 +314,7 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white" id="Funding">
+<section class="projects-section bg-white undisplayed" id="Funding">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -333,7 +333,7 @@
 
 
 <!-- Tutorial section -->
-<section class="projects-section bg-white" id="Tutorial">
+<section class="projects-section bg-white undisplayed" id="Tutorial">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -385,7 +385,7 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-white" id="Resources">
+<section class="projects-section bg-white undisplayed" id="Resources">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -410,7 +410,7 @@
 <!--================================================================-->
 
 <!-- Projects -->
-<section class="projects-section bg-light" id="Projects">
+<section class="projects-section bg-light undisplayed" id="Projects">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
