--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
