add fade in to tabcontent

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link tabFade" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" href="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#People">People</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial">SiGML</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Projects">Projects</a></li>
             </ul>
         </div>
     </div>
@@ -89,7 +89,7 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light fadeIn" id="About">
+<section class="projects-section bg-light fadeIn" id="About" role="tabpanel">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
@@ -128,7 +128,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" role="tabpanel">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -216,7 +216,7 @@
 <!--================================================================-->
 
 <!-- Project info section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="People">
+<section class="projects-section bg-light fadeIn undisplayed" id="People" role="tabpanel">
 
     <div class="container" height="100%">
 
@@ -297,7 +297,7 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Publications">
+<section class="projects-section bg-white fadeIn undisplayed" id="Publications" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -314,7 +314,7 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Funding">
+<section class="projects-section bg-white fadeIn undisplayed" id="Funding" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -333,7 +333,7 @@
 
 
 <!-- Tutorial section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Tutorial">
+<section class="projects-section bg-white fadeIn undisplayed" id="Tutorial" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -385,7 +385,7 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Resources">
+<section class="projects-section bg-white fadeIn undisplayed" id="Resources" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -410,7 +410,7 @@
 <!--================================================================-->
 
 <!-- Projects -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Projects">
+<section class="projects-section bg-light fadeIn undisplayed" id="Projects" role="tabpanel">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
