--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Translate">Translator</a></li>
+            <ul class="navbar-nav ml-auto" role="tablist">
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Funding">Funding</a></li>
