--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light fadeIn" id="About" role="tabpanel">
+<section class="projects-section bg-light show fadeIn" id="About" role="tabpanel">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
