add fade in to tabcontent

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <ul class="navbar-nav ml-auto" role="tablist">
                 <li class="nav-item"><a class="nav-link tabFade active" data-toggle="tab" role="tab" href="#About">Mission</a></li>
                 <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#People">People</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Tutorial">SiGML</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Projects">Projects</a></li>
             </ul>
         </div>
     </div>
