--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link tabFade active" data-toggle="tab" role="tab" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#About">Mission</a></li>
                 <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link tabFade" data-toggle="tab" role="tab" href="#Publications">Publications</a></li>
