fade in gaat niet werken

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light fadeIn" id="About" role="tabpanel">
+<section class="projects-section bg-light fadeIn" id="About">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
@@ -128,7 +128,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white undisplayed fadeIn" id="Translate" role="tabpanel">
+<section class="projects-section bg-white fadeIn" id="Translate" role="tabpanel">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -216,7 +216,7 @@
 <!--================================================================-->
 
 <!-- Project info section -->
-<section class="projects-section bg-light undisplayed fadeIn" id="People" role="tabpanel">
+<section class="projects-section bg-light fadeIn" id="People" role="tabpanel">
 
     <div class="container" height="100%">
 
@@ -297,7 +297,7 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white undisplayed fadeIn" id="Publications" role="tabpanel">
+<section class="projects-section bg-white fadeIn" id="Publications" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -314,7 +314,7 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white undisplayed fadeIn" id="Funding" role="tabpanel">
+<section class="projects-section bg-white fadeIn" id="Funding" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -333,7 +333,7 @@
 
 
 <!-- Tutorial section -->
-<section class="projects-section bg-white undisplayed fadeIn" id="Tutorial" role="tabpanel">
+<section class="projects-section bg-white fadeIn" id="Tutorial" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -385,7 +385,7 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-white undisplayed fadeIn" id="Resources" role="tabpanel">
+<section class="projects-section bg-white fadeIn" id="Resources" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -410,7 +410,7 @@
 <!--================================================================-->
 
 <!-- Projects -->
-<section class="projects-section bg-light undisplayed fadeIn" id="Projects" role="tabpanel">
+<section class="projects-section bg-light fadeIn" id="Projects" role="tabpanel">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
