--- a/cwa/TwoAvatars/CWASA-plus-two-avatar-gui-elements.html
+++ b/cwa/TwoAvatars/CWASA-plus-two-avatar-gui-elements.html
@@ -10,10 +10,8 @@
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/tech/jas/vhg2020z -->
 
-<link rel="stylesheet"
-    href="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020z/cwa/cwasa.css" />
-<script type="text/javascript"
-    src="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020z/cwa/allcsa.js"></script>
+<link rel="stylesheet" href="css/cwasa-reduced.css">
+<script type="text/javascript" src="cwa/allcsa.js"> </script>
 
 </head>
 
