john voorbeeld twee avatars

--- a/cwa/TwoAvatars/CWASA-plus-two-avatar-gui-elements.html
+++ b/cwa/TwoAvatars/CWASA-plus-two-avatar-gui-elements.html
@@ -10,8 +10,8 @@
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/tech/jas/vhg2020z -->
 
-<link rel="stylesheet" href="css/cwasa-reduced.css">
-<script type="text/javascript" src="cwa/allcsa.js"> </script>
+<link rel="stylesheet" href="../css/cwasa-reduced.css">
+<script type="text/javascript" src="../cwa/allcsa.js"> </script>
 
 </head>
 
