probeersel twee avatars

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvatar av1"></span>
+            <span id="avatarTut" class="CWASAAvatar av1" align="center" style="width:300px;"></span>
             <!-- <div class="CWASAAvatar" align="center" ></div>-->          
           </div>
       </div>
