probeersel met twee avatars

--- a/TwoAvatars/CWASA-plus-two-avatar-gui-elements.html
+++ b/TwoAvatars/CWASA-plus-two-avatar-gui-elements.html
@@ -41,7 +41,7 @@
 <td align="center" valign="center">
 
 <!-- Bespoke signing avatar GUI 0 -->
-<div class="divCtrlPanel" >
+<div class="CWASAAvatar av0" >
 
 <!-- Avatar Menu -->
 Avatar: <span class="CWASAAvMenu av0" ></span>
