email toegevoegd aan footer

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 </section>
 
 <!-- Footer-->
-<footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam</div></footer>
+<footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="glyphicon glyphicon-envelope"></i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
